--- a/elm-client/package.json
+++ b/elm-client/package.json
@@ -10,8 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "better-scroll": "^1.12.4",
+    "fastclick": "^1.0.6",
+    "iscroll": "^5.2.0",
+    "showdown": "^1.8.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
